@@ -1,3 +1,4 @@
+2024/03/17 Added equipment WIP
 2023/11/02 Added player ranking
 2023/10/05 Added world group support
 2023/07/06 Reworked levellink command
